--- a/i18n/en_US.po
+++ b/i18n/en_US.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2020-01-07 11:36+0800\n"
-"PO-Revision-Date: 2020-01-07 11:36+0800\n"
+"POT-Creation-Date: 2020-01-10 19:06+0800\n"
+"PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: en_US\n"
@@ -17,158 +17,129 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ConfigDialog.cpp:14 DataGrid.cpp:188
-msgid "Initial balance"
-msgstr "Initial balance"
-
-#: ConfigDialog.cpp:15
-msgid "Change password"
-msgstr "Change password"
-
-#: ConfigDialog.cpp:42 MainFrame.cpp:111
-msgid "Input password"
-msgstr "Input password"
-
-#: ConfigDialog.cpp:45
-msgid "Input password again"
-msgstr "Input password again"
-
-#: DailyGrid.cpp:12
-msgid "Category"
-msgstr "Category"
-
-#: DailyGrid.cpp:38
+#: DailyGrid.cpp:27
 msgid "Cannot set category for an item with no description"
 msgstr "Cannot set category for an item with no description"
 
-#: DailyGrid.cpp:38 DataGrid.cpp:50 MainFrame.cpp:37 MainFrame.cpp:111
-#: MainFrame.cpp:155 MainFrame.cpp:163 MainFrame.cpp:204 MainFrame.cpp:244
-#: MainFrame.cpp:256 MainFrame.cpp:261 MainFrame.cpp:298 MainFrame.cpp:319
-#: MainFrame.cpp:354 MainFrame.cpp:358 MainFrame.cpp:360 MainFrame.cpp:459
-#: MainFrame.cpp:467 MonthValidator.cpp:12
+#: DailyGrid.cpp:27 DataGrid.cpp:37 MainFrame.cpp:69 MainFrame.cpp:74
+#: MainFrame.cpp:121 MainFrame.cpp:157 MainFrame.cpp:205 MainFrame.cpp:217
+#: MainFrame.cpp:222 MainFrame.cpp:279 MainFrame.cpp:328 MainFrame.cpp:332
+#: MainFrame.cpp:398 MainFrame.cpp:406 MonthValidator.cpp:12
 msgid "App name"
 msgstr "App name"
 
-#: DailyGrid.cpp:66 DailyGrid.cpp:108 StatHtml.cpp:81
+#: DailyGrid.cpp:44
+msgid "Category"
+msgstr "Category"
+
+#: DailyGrid.cpp:63 DailyGrid.cpp:105 StatHtml.cpp:103
 msgid "Unclassified"
 msgstr "Unclassified"
 
-#: DataGrid.cpp:11 StatHtml.cpp:28
-msgid "Income"
-msgstr "Income"
-
-#: DataGrid.cpp:12 StatHtml.cpp:29
-msgid "Outlay"
-msgstr "Outlay"
-
-#: DataGrid.cpp:13
-msgid "Balance"
-msgstr "Balance"
-
-#: DataGrid.cpp:14
-msgid "Description"
-msgstr "Description"
-
-#: DataGrid.cpp:15
-msgid "Comments"
-msgstr "Comments"
-
-#: DataGrid.cpp:50
+#: DataGrid.cpp:37
 msgid "Cannot set both income and outlay in one line"
 msgstr "Cannot set both income and outlay in one line"
 
-#: DataGrid.cpp:210
-msgid "strTotal"
-msgstr "strTotal"
+#: DataGrid.cpp:139 StatHtml.cpp:51
+msgid "Income"
+msgstr "Income"
 
-#: MainFrame.cpp:51
-msgid "Monthly"
-msgstr "Monthly"
+#: DataGrid.cpp:140 StatHtml.cpp:52
+msgid "Outlay"
+msgstr "Outlay"
 
-#: MainFrame.cpp:54
-msgid "Cash"
-msgstr "Cash"
+#: DataGrid.cpp:141
+msgid "Balance"
+msgstr "Balance"
 
-#: MainFrame.cpp:57
-msgid "Statistics"
-msgstr "Statistics"
+#: DataGrid.cpp:142
+msgid "Description"
+msgstr "Description"
 
-#: MainFrame.cpp:60
-msgid "Export"
-msgstr "Export"
+#: DataGrid.cpp:143
+msgid "Comments"
+msgstr "Comments"
 
-#: MainFrame.cpp:63
-msgid "Import"
-msgstr "Import"
+#: DataGrid.cpp:187
+msgid "Initial balance"
+msgstr "Initial balance"
 
-#: MainFrame.cpp:163
+#: DataGrid.cpp:209 StatHtml.cpp:63 StatHtml.cpp:102
+msgid "Total"
+msgstr "Total"
+
+#: MainFrame.cpp:69
+msgid "File corrupted"
+msgstr "File corrupted"
+
+#: MainFrame.cpp:74
+msgid "Input password"
+msgstr "Input password"
+
+#: MainFrame.cpp:121
 msgid "Category config is empty"
 msgstr "Category config is empty"
 
-#: MainFrame.cpp:183 StatDialog.cpp:20
+#: MainFrame.cpp:137
 msgid "Annually statistics"
 msgstr "Annually statistics"
 
-#: MainFrame.cpp:191 StatDialog.cpp:21
+#: MainFrame.cpp:144
 msgid "Monthly statistics"
 msgstr "Monthly statistics"
 
-#: MainFrame.cpp:202
+#: MainFrame.cpp:155
 msgid "Current datum"
 msgstr "Current datum"
 
-#: MainFrame.cpp:203 MainFrame.cpp:242
+#: MainFrame.cpp:156 MainFrame.cpp:203
 msgid "Categories config"
 msgstr "Categories config"
 
-#: MainFrame.cpp:204
+#: MainFrame.cpp:157
 msgid "Choose one to export"
 msgstr "Choose one to export"
 
-#: MainFrame.cpp:240
+#: MainFrame.cpp:201
 msgid "Monthly datum"
 msgstr "Monthly datum"
 
-#: MainFrame.cpp:241
+#: MainFrame.cpp:202
 msgid "Cash datum"
 msgstr "Cash datum"
 
-#: MainFrame.cpp:244
+#: MainFrame.cpp:205
 msgid "Choose one to import into"
 msgstr "Choose one to import into"
 
-#: MainFrame.cpp:256
+#: MainFrame.cpp:217
 msgid "File is empty"
 msgstr "File is empty"
 
-#: MainFrame.cpp:260
+#: MainFrame.cpp:221
 #, c-format
 msgid "Invalid date \"%1$s\""
 msgstr "Invalid date \"%1$s\""
 
-#: MainFrame.cpp:319
+#: MainFrame.cpp:279
 msgid "Input passwords are not the same"
 msgstr "Input passwords are not the same"
 
-#: MainFrame.cpp:353
+#: MainFrame.cpp:327
 #, c-format
 msgid "Error in category config file at line %1$d"
 msgstr "Error in category config file at line %1$d"
 
-#: MainFrame.cpp:357
+#: MainFrame.cpp:331
 #, c-format
 msgid "Duplicate words in categories config at line %1$d"
 msgstr "Duplicate words in categories config at line %1$d"
 
-#: MainFrame.cpp:360
-msgid "File corrupted"
-msgstr "File corrupted"
-
-#: MainFrame.cpp:459
+#: MainFrame.cpp:398
 msgid "Unknown error"
 msgstr "Unknown error"
 
-#: MainFrame.cpp:466
+#: MainFrame.cpp:405
 #, c-format
 msgid "Error in file \"%1$s\" at line %2$d"
 msgstr "Error in file \"%1$s\" at line %2$d"
@@ -177,84 +148,96 @@ msgstr "Error in file \"%1$s\" at line %2$d"
 msgid "Input date is invalid"
 msgstr "Input date is invalid"
 
-#: StatDialog.cpp:19
-msgid "Classified statistics"
-msgstr "Classified statistics"
-
-#: StatDialog.cpp:89
-msgid "Current month"
-msgstr "Current month"
-
-#: StatDialog.cpp:90
-msgid "Previous month"
-msgstr "Previous month"
-
-#: StatDialog.cpp:91
-msgid "Current year"
-msgstr "Current year"
-
-#: StatDialog.cpp:92
-msgid "Previous year"
-msgstr "Previous year"
-
-#: StatDialog.cpp:93
-msgid "All"
-msgstr "All"
-
-#: StatDialog.cpp:94
-msgid "Customized"
-msgstr "Customized"
-
-#: StatDialog.cpp:100
-msgid "Choices"
-msgstr "Choices"
-
-#: StatDialog.cpp:105
-msgid "From"
-msgstr "From"
-
-#: StatDialog.cpp:111
-msgid "To"
-msgstr "To"
-
-#: StatDialog.cpp:118
-msgid "Input date as yyyymm, e.g. 201202"
-msgstr "Input date as yyyymm, e.g. 201202"
-
-#: StatDialog.cpp:130
+#: StatDialog.cpp:86
 #, c-format
 msgid "Annually statistics from %1$s to %2$s"
 msgstr "Annually statistics from %1$s to %2$s"
 
-#: StatHtml.cpp:10
+#: StatHtml.cpp:31
 #, c-format
 msgid "Classified statistics from %1$d/%2$d to %3$d/%4$d"
 msgstr "Classified statistics from %1$d/%2$d to %3$d/%4$d"
 
-#: StatHtml.cpp:27
+#: StatHtml.cpp:50
 msgid "Time"
 msgstr "Time"
 
-#: StatHtml.cpp:30
+#: StatHtml.cpp:53
 msgid "Net Income"
 msgstr "Net Income"
 
-#: StatHtml.cpp:40 StatHtml.cpp:80
-msgid "Total"
-msgstr "Total"
-
-#: StatHtml.cpp:81 StatHtml.cpp:82 StatHtml.cpp:100
+#: StatHtml.cpp:103 StatHtml.cpp:104 StatHtml.cpp:122
 msgid "Percentage in total"
 msgstr "Percentage in total"
 
-#: StatHtml.cpp:82 StatHtml.cpp:104
+#: StatHtml.cpp:104 StatHtml.cpp:126
 msgid "Other"
 msgstr "Other"
 
-#: StatHtml.cpp:98
+#: StatHtml.cpp:120
 msgid "Total of this category"
 msgstr "Total of this category"
 
-#: StatHtml.cpp:104 StatHtml.cpp:119
+#: StatHtml.cpp:126 StatHtml.cpp:141
 msgid "Percentage in total of this category"
 msgstr "Percentage in total of this category"
+
+msgid "Change password"
+msgstr "Change password"
+
+msgid "Input password again"
+msgstr "Input password again"
+
+msgid "Monthly"
+msgstr "Monthly"
+
+msgid "Cash"
+msgstr "Cash"
+
+msgid "Statistics"
+msgstr "Statistics"
+
+msgid "Export"
+msgstr "Export"
+
+msgid "Import"
+msgstr "Import"
+
+msgid "Classified statistics"
+msgstr "Classified statistics"
+
+msgid "Current month"
+msgstr "Current month"
+
+msgid "Previous month"
+msgstr "Previous month"
+
+msgid "Current year"
+msgstr "Current year"
+
+msgid "Previous year"
+msgstr "Previous year"
+
+msgid "All"
+msgstr "All"
+
+msgid "Customized"
+msgstr "Customized"
+
+msgid "Choices"
+msgstr "Choices"
+
+msgid "From"
+msgstr "From"
+
+msgid "To"
+msgstr "To"
+
+msgid "Statistics result"
+msgstr "Statistics result"
+
+msgid "OK"
+msgstr "OK"
+
+msgid "Cancel"
+msgstr "Cancel"
