--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2020-01-07 11:36+0800\n"
-"PO-Revision-Date: 2020-01-07 11:36+0800\n"
+"POT-Creation-Date: 2020-01-10 19:06+0800\n"
+"PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: zh_CN\n"
@@ -17,158 +17,129 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ConfigDialog.cpp:14 DataGrid.cpp:188
-msgid "Initial balance"
-msgstr "期初余额"
-
-#: ConfigDialog.cpp:15
-msgid "Change password"
-msgstr "改密码"
-
-#: ConfigDialog.cpp:42 MainFrame.cpp:111
-msgid "Input password"
-msgstr "输入密码"
-
-#: ConfigDialog.cpp:45
-msgid "Input password again"
-msgstr "再次输入密码"
-
-#: DailyGrid.cpp:12
-msgid "Category"
-msgstr "分类"
-
-#: DailyGrid.cpp:38
+#: DailyGrid.cpp:27
 msgid "Cannot set category for an item with no description"
 msgstr "不能给没有说明的项目设置分类"
 
-#: DailyGrid.cpp:38 DataGrid.cpp:50 MainFrame.cpp:37 MainFrame.cpp:111
-#: MainFrame.cpp:155 MainFrame.cpp:163 MainFrame.cpp:204 MainFrame.cpp:244
-#: MainFrame.cpp:256 MainFrame.cpp:261 MainFrame.cpp:298 MainFrame.cpp:319
-#: MainFrame.cpp:354 MainFrame.cpp:358 MainFrame.cpp:360 MainFrame.cpp:459
-#: MainFrame.cpp:467 MonthValidator.cpp:12
+#: DailyGrid.cpp:27 DataGrid.cpp:37 MainFrame.cpp:69 MainFrame.cpp:74
+#: MainFrame.cpp:121 MainFrame.cpp:157 MainFrame.cpp:205 MainFrame.cpp:217
+#: MainFrame.cpp:222 MainFrame.cpp:279 MainFrame.cpp:328 MainFrame.cpp:332
+#: MainFrame.cpp:398 MainFrame.cpp:406 MonthValidator.cpp:12
 msgid "App name"
 msgstr "家庭小账本"
 
-#: DailyGrid.cpp:66 DailyGrid.cpp:108 StatHtml.cpp:81
+#: DailyGrid.cpp:44
+msgid "Category"
+msgstr "分类"
+
+#: DailyGrid.cpp:63 DailyGrid.cpp:105 StatHtml.cpp:103
 msgid "Unclassified"
 msgstr "未分类"
 
-#: DataGrid.cpp:11 StatHtml.cpp:28
-msgid "Income"
-msgstr "收入"
-
-#: DataGrid.cpp:12 StatHtml.cpp:29
-msgid "Outlay"
-msgstr "支出"
-
-#: DataGrid.cpp:13
-msgid "Balance"
-msgstr "结余"
-
-#: DataGrid.cpp:14
-msgid "Description"
-msgstr "说明"
-
-#: DataGrid.cpp:15
-msgid "Comments"
-msgstr "备注"
-
-#: DataGrid.cpp:50
+#: DataGrid.cpp:37
 msgid "Cannot set both income and outlay in one line"
 msgstr "同一行内不能既有收入又有支出"
 
-#: DataGrid.cpp:210
-msgid "strTotal"
+#: DataGrid.cpp:139 StatHtml.cpp:51
+msgid "Income"
+msgstr "收入"
+
+#: DataGrid.cpp:140 StatHtml.cpp:52
+msgid "Outlay"
+msgstr "支出"
+
+#: DataGrid.cpp:141
+msgid "Balance"
+msgstr "结余"
+
+#: DataGrid.cpp:142
+msgid "Description"
+msgstr "说明"
+
+#: DataGrid.cpp:143
+msgid "Comments"
+msgstr "备注"
+
+#: DataGrid.cpp:187
+msgid "Initial balance"
+msgstr "期初余额"
+
+#: DataGrid.cpp:209 StatHtml.cpp:63 StatHtml.cpp:102
+msgid "Total"
 msgstr "总计"
 
-#: MainFrame.cpp:51
-msgid "Monthly"
-msgstr "月度"
+#: MainFrame.cpp:69
+msgid "File corrupted"
+msgstr "文件已损坏"
 
-#: MainFrame.cpp:54
-msgid "Cash"
-msgstr "现金"
+#: MainFrame.cpp:74
+msgid "Input password"
+msgstr "输入密码"
 
-#: MainFrame.cpp:57
-msgid "Statistics"
-msgstr "汇总"
-
-#: MainFrame.cpp:60
-msgid "Export"
-msgstr "导出"
-
-#: MainFrame.cpp:63
-msgid "Import"
-msgstr "导入"
-
-#: MainFrame.cpp:163
+#: MainFrame.cpp:121
 msgid "Category config is empty"
 msgstr "分类配置为空"
 
-#: MainFrame.cpp:183 StatDialog.cpp:20
+#: MainFrame.cpp:137
 msgid "Annually statistics"
 msgstr "历年汇总"
 
-#: MainFrame.cpp:191 StatDialog.cpp:21
+#: MainFrame.cpp:144
 msgid "Monthly statistics"
 msgstr "年度汇总"
 
-#: MainFrame.cpp:202
+#: MainFrame.cpp:155
 msgid "Current datum"
 msgstr "当前数据"
 
-#: MainFrame.cpp:203 MainFrame.cpp:242
+#: MainFrame.cpp:156 MainFrame.cpp:203
 msgid "Categories config"
 msgstr "分类配置"
 
-#: MainFrame.cpp:204
+#: MainFrame.cpp:157
 msgid "Choose one to export"
 msgstr "选择导出的内容"
 
-#: MainFrame.cpp:240
+#: MainFrame.cpp:201
 msgid "Monthly datum"
 msgstr "月度数据"
 
-#: MainFrame.cpp:241
+#: MainFrame.cpp:202
 msgid "Cash datum"
 msgstr "现金数据"
 
-#: MainFrame.cpp:244
+#: MainFrame.cpp:205
 msgid "Choose one to import into"
 msgstr "选择导入的目标"
 
-#: MainFrame.cpp:256
+#: MainFrame.cpp:217
 msgid "File is empty"
 msgstr "文件是空的"
 
-#: MainFrame.cpp:260
+#: MainFrame.cpp:221
 #, c-format
 msgid "Invalid date \"%1$s\""
 msgstr "错误的日期：\"%1$s\""
 
-#: MainFrame.cpp:319
+#: MainFrame.cpp:279
 msgid "Input passwords are not the same"
 msgstr "两次输入的密码不同"
 
-#: MainFrame.cpp:353
+#: MainFrame.cpp:327
 #, c-format
 msgid "Error in category config file at line %1$d"
 msgstr "分类配置文件的第 %1$d 行有错误"
 
-#: MainFrame.cpp:357
+#: MainFrame.cpp:331
 #, c-format
 msgid "Duplicate words in categories config at line %1$d"
 msgstr "分类配置文件的第 %1$d 行有重名的词"
 
-#: MainFrame.cpp:360
-msgid "File corrupted"
-msgstr "文件已损坏"
-
-#: MainFrame.cpp:459
+#: MainFrame.cpp:398
 msgid "Unknown error"
 msgstr "未知错误"
 
-#: MainFrame.cpp:466
+#: MainFrame.cpp:405
 #, c-format
 msgid "Error in file \"%1$s\" at line %2$d"
 msgstr "文件 \"%1$s\" 的第 %2$d 行有错误"
@@ -177,84 +148,96 @@ msgstr "文件 \"%1$s\" 的第 %2$d 行有错误"
 msgid "Input date is invalid"
 msgstr "输入的日期格式错误"
 
-#: StatDialog.cpp:19
-msgid "Classified statistics"
-msgstr "分类汇总"
-
-#: StatDialog.cpp:89
-msgid "Current month"
-msgstr "当月"
-
-#: StatDialog.cpp:90
-msgid "Previous month"
-msgstr "上月"
-
-#: StatDialog.cpp:91
-msgid "Current year"
-msgstr "当年"
-
-#: StatDialog.cpp:92
-msgid "Previous year"
-msgstr "去年"
-
-#: StatDialog.cpp:93
-msgid "All"
-msgstr "全部"
-
-#: StatDialog.cpp:94
-msgid "Customized"
-msgstr "自定义"
-
-#: StatDialog.cpp:100
-msgid "Choices"
-msgstr "请选择"
-
-#: StatDialog.cpp:105
-msgid "From"
-msgstr "从"
-
-#: StatDialog.cpp:111
-msgid "To"
-msgstr "到"
-
-#: StatDialog.cpp:118
-msgid "Input date as yyyymm, e.g. 201202"
-msgstr "输入日期格式：yyyymm, 如 201202"
-
-#: StatDialog.cpp:130
+#: StatDialog.cpp:86
 #, c-format
 msgid "Annually statistics from %1$s to %2$s"
 msgstr "从 %1$s 年到 %2$s 年的历年收支汇总"
 
-#: StatHtml.cpp:10
+#: StatHtml.cpp:31
 #, c-format
 msgid "Classified statistics from %1$d/%2$d to %3$d/%4$d"
 msgstr "从 %1$d 年 %2$d 月到 %3$d 年 %4$d 月的分类汇总"
 
-#: StatHtml.cpp:27
+#: StatHtml.cpp:50
 msgid "Time"
 msgstr "时间"
 
-#: StatHtml.cpp:30
+#: StatHtml.cpp:53
 msgid "Net Income"
 msgstr "净收入"
 
-#: StatHtml.cpp:40 StatHtml.cpp:80
-msgid "Total"
-msgstr "总计"
-
-#: StatHtml.cpp:81 StatHtml.cpp:82 StatHtml.cpp:100
+#: StatHtml.cpp:103 StatHtml.cpp:104 StatHtml.cpp:122
 msgid "Percentage in total"
 msgstr "占总计比"
 
-#: StatHtml.cpp:82 StatHtml.cpp:104
+#: StatHtml.cpp:104 StatHtml.cpp:126
 msgid "Other"
 msgstr "其他"
 
-#: StatHtml.cpp:98
+#: StatHtml.cpp:120
 msgid "Total of this category"
 msgstr "合计"
 
-#: StatHtml.cpp:104 StatHtml.cpp:119
+#: StatHtml.cpp:126 StatHtml.cpp:141
 msgid "Percentage in total of this category"
 msgstr "占分类比"
+
+msgid "Change password"
+msgstr "改密码"
+
+msgid "Input password again"
+msgstr "再次输入密码"
+
+msgid "Monthly"
+msgstr "月度"
+
+msgid "Cash"
+msgstr "现金"
+
+msgid "Statistics"
+msgstr "汇总"
+
+msgid "Export"
+msgstr "导出"
+
+msgid "Import"
+msgstr "导入"
+
+msgid "Classified statistics"
+msgstr "分类汇总"
+
+msgid "Current month"
+msgstr "当月"
+
+msgid "Previous month"
+msgstr "上月"
+
+msgid "Current year"
+msgstr "当年"
+
+msgid "Previous year"
+msgstr "去年"
+
+msgid "All"
+msgstr "全部"
+
+msgid "Customized"
+msgstr "自定义"
+
+msgid "Choices"
+msgstr "请选择"
+
+msgid "From"
+msgstr "从"
+
+msgid "To"
+msgstr "到"
+
+msgid "Statistics result"
+msgstr "汇总结果"
+
+msgid "OK"
+msgstr "确定"
+
+msgid "Cancel"
+msgstr "取消"
