--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2020-01-19 18:34+0800\n"
+"POT-Creation-Date: 2020-01-23 10:44+0800\n"
 "PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,6 +31,30 @@ msgstr "期初余额"
 
 msgid "Total"
 msgstr "总计"
+
+msgid "Income"
+msgstr "收入"
+
+msgid "Outlay"
+msgstr "支出"
+
+msgid "Description"
+msgstr "说明"
+
+msgid "Comments"
+msgstr "备注"
+
+msgid "Balance"
+msgstr "结余"
+
+msgid "Category"
+msgstr "分类"
+
+msgid "Count"
+msgstr "次数"
+
+msgid "In use"
+msgstr "在用"
 
 msgid "File corrupted"
 msgstr "文件已损坏"
@@ -70,7 +94,7 @@ msgid "Invalid date \"%1$s\""
 msgstr "错误的日期：\"%1$s\""
 
 msgid "Not a valid file."
-msgstr ""
+msgstr "文件无效"
 
 msgid "Input passwords are not the same"
 msgstr "两次输入的密码不同"
@@ -103,12 +127,6 @@ msgstr "从 %1$d 年 %2$d 月到 %3$d 年 %4$d 月的分类汇总"
 
 msgid "Time"
 msgstr "时间"
-
-msgid "Income"
-msgstr "收入"
-
-msgid "Outlay"
-msgstr "支出"
 
 msgid "Net Income"
 msgstr "净收入"
@@ -178,3 +196,6 @@ msgstr "到"
 
 msgid "Statistics result"
 msgstr "汇总结果"
+
+msgid "Categories view"
+msgstr "分类查看"
