--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -122,6 +122,10 @@ msgid "Annually statistics from %1$s to %2$s"
 msgstr "从 %1$s 年到 %2$s 年的历年收支汇总"
 
 #, c-format
+msgid "No data is available"
+msgstr "没有可用的数据"
+
+#, c-format
 msgid "Classified statistics from %1$d/%2$d to %3$d/%4$d"
 msgstr "从 %1$d 年 %2$d 月到 %3$d 年 %4$d 月的分类汇总"
 
