--- a/i18n/en_US.po
+++ b/i18n/en_US.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2020-01-23 10:44+0800\n"
+"POT-Creation-Date: 2021-03-10 11:07+0800\n"
 "PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -47,6 +47,9 @@ msgstr "Comments"
 msgid "Balance"
 msgstr "Balance"
 
+msgid "Modification Time"
+msgstr "Modification Time"
+
 msgid "Category"
 msgstr "Category"
 
@@ -73,9 +76,6 @@ msgstr "Monthly statistics"
 
 msgid "Current datum"
 msgstr "Current datum"
-
-msgid "Categories config"
-msgstr "Categories config"
 
 msgid "All datum"
 msgstr "All datum"
@@ -121,7 +121,6 @@ msgstr "Input date is invalid"
 msgid "Annually statistics from %1$s to %2$s"
 msgstr "Annually statistics from %1$s to %2$s"
 
-#, c-format
 msgid "No data is available"
 msgstr "No data is available"
 
@@ -146,60 +145,3 @@ msgstr "Total of this category"
 
 msgid "Percentage in total of this category"
 msgstr "Percentage in total of this category"
-
-msgid "Change password"
-msgstr "Change password"
-
-msgid "Input password again"
-msgstr "Input password again"
-
-msgid "Monthly"
-msgstr "Monthly"
-
-msgid "Cash"
-msgstr "Cash"
-
-msgid "Statistics"
-msgstr "Statistics"
-
-msgid "Export"
-msgstr "Export"
-
-msgid "Import"
-msgstr "Import"
-
-msgid "Classified statistics"
-msgstr "Classified statistics"
-
-msgid "Current month"
-msgstr "Current month"
-
-msgid "Previous month"
-msgstr "Previous month"
-
-msgid "Current year"
-msgstr "Current year"
-
-msgid "Previous year"
-msgstr "Previous year"
-
-msgid "All"
-msgstr "All"
-
-msgid "Customized"
-msgstr "Customized"
-
-msgid "Choices"
-msgstr "Choices"
-
-msgid "From"
-msgstr "From"
-
-msgid "To"
-msgstr "To"
-
-msgid "Statistics result"
-msgstr "Statistics result"
-
-msgid "Categories view"
-msgstr "Categories view"
