--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2020-01-23 10:44+0800\n"
+"POT-Creation-Date: 2021-03-10 11:07+0800\n"
 "PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -47,6 +47,9 @@ msgstr "备注"
 msgid "Balance"
 msgstr "结余"
 
+msgid "Modification Time"
+msgstr "修改时间"
+
 msgid "Category"
 msgstr "分类"
 
@@ -73,9 +76,6 @@ msgstr "年度汇总"
 
 msgid "Current datum"
 msgstr "当前数据"
-
-msgid "Categories config"
-msgstr "分类配置"
 
 msgid "All datum"
 msgstr "全部数据"
@@ -121,7 +121,6 @@ msgstr "输入的日期格式错误"
 msgid "Annually statistics from %1$s to %2$s"
 msgstr "从 %1$s 年到 %2$s 年的历年收支汇总"
 
-#, c-format
 msgid "No data is available"
 msgstr "没有可用的数据"
 
@@ -146,60 +145,3 @@ msgstr "合计"
 
 msgid "Percentage in total of this category"
 msgstr "占分类比"
-
-msgid "Change password"
-msgstr "改密码"
-
-msgid "Input password again"
-msgstr "再次输入密码"
-
-msgid "Monthly"
-msgstr "月度"
-
-msgid "Cash"
-msgstr "现金"
-
-msgid "Statistics"
-msgstr "汇总"
-
-msgid "Export"
-msgstr "导出"
-
-msgid "Import"
-msgstr "导入"
-
-msgid "Classified statistics"
-msgstr "分类汇总"
-
-msgid "Current month"
-msgstr "当月"
-
-msgid "Previous month"
-msgstr "上月"
-
-msgid "Current year"
-msgstr "当年"
-
-msgid "Previous year"
-msgstr "去年"
-
-msgid "All"
-msgstr "全部"
-
-msgid "Customized"
-msgstr "自定义"
-
-msgid "Choices"
-msgstr "请选择"
-
-msgid "From"
-msgstr "从"
-
-msgid "To"
-msgstr "到"
-
-msgid "Statistics result"
-msgstr "汇总结果"
-
-msgid "Categories view"
-msgstr "分类查看"
