--- a/i18n/en_US.po
+++ b/i18n/en_US.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2021-03-10 11:07+0800\n"
+"POT-Creation-Date: 2021-03-10 11:49+0800\n"
 "PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -145,3 +145,63 @@ msgstr "Total of this category"
 
 msgid "Percentage in total of this category"
 msgstr "Percentage in total of this category"
+
+msgid "Categories config"
+msgstr "Categories config"
+
+msgid "Change password"
+msgstr "Change password"
+
+msgid "Input password again"
+msgstr "Input password again"
+
+msgid "Monthly"
+msgstr "Monthly"
+
+msgid "Cash"
+msgstr "Cash"
+
+msgid "Statistics"
+msgstr "Statistics"
+
+msgid "Export"
+msgstr "Export"
+
+msgid "Import"
+msgstr "Import"
+
+msgid "Classified statistics"
+msgstr "Classified statistics"
+
+msgid "Current month"
+msgstr "Current month"
+
+msgid "Previous month"
+msgstr "Previous month"
+
+msgid "Current year"
+msgstr "Current year"
+
+msgid "Previous year"
+msgstr "Previous year"
+
+msgid "All"
+msgstr "All"
+
+msgid "Customized"
+msgstr "Customized"
+
+msgid "Choices"
+msgstr "Choices"
+
+msgid "From"
+msgstr "From"
+
+msgid "To"
+msgstr "To"
+
+msgid "Statistics result"
+msgstr "Statistics result"
+
+msgid "Categories view"
+msgstr "Categories view"
