--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HomeAccount 1.0\n"
 "Report-Msgid-Bugs-To: lasyard@yeah.net\n"
-"POT-Creation-Date: 2021-03-10 11:07+0800\n"
+"POT-Creation-Date: 2021-03-10 11:49+0800\n"
 "PO-Revision-Date: 2020-01-10 19:06+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -145,3 +145,63 @@ msgstr "合计"
 
 msgid "Percentage in total of this category"
 msgstr "占分类比"
+
+msgid "Categories config"
+msgstr "分类配置"
+
+msgid "Change password"
+msgstr "改密码"
+
+msgid "Input password again"
+msgstr "再次输入密码"
+
+msgid "Monthly"
+msgstr "月度"
+
+msgid "Cash"
+msgstr "现金"
+
+msgid "Statistics"
+msgstr "汇总"
+
+msgid "Export"
+msgstr "导出"
+
+msgid "Import"
+msgstr "导入"
+
+msgid "Classified statistics"
+msgstr "分类汇总"
+
+msgid "Current month"
+msgstr "当月"
+
+msgid "Previous month"
+msgstr "上月"
+
+msgid "Current year"
+msgstr "当年"
+
+msgid "Previous year"
+msgstr "去年"
+
+msgid "All"
+msgstr "全部"
+
+msgid "Customized"
+msgstr "自定义"
+
+msgid "Choices"
+msgstr "请选择"
+
+msgid "From"
+msgstr "从"
+
+msgid "To"
+msgstr "到"
+
+msgid "Statistics result"
+msgstr "汇总结果"
+
+msgid "Categories view"
+msgstr "分类查看"
